2003-07-13  Ion Badulescu  <lionut@gonzales.badula.org>

	* amd/amfs_generic.c (amfs_lookup_mntfs): ditto as below for the
	special provision

	* amd/mntfs.c (find_mntfs): compare the filesystem type
	(i.e. mf_ops) in addition to mf_info; the special provision
	mentioned below is really for any filesystem already mounted on
	our mount point, not just for inherited filesystems

2003-07-13  Erez Zadok  <ezk@whitestar.dyn.optonline.net>

	* doc/Makefile.am (install-html): build per-chapter HTML manual,
	as well as manual in one big HTML file.

	* doc/am-utils.texi: Minor corrections.  Ack Ion's autofs work.
	Ack maintainers.  New section on How to get additionl info,
	including the Amd book.  Correct stale URLs and Emails.

	* amd/amd.8, amq/amq.8, amq/pawd.1, fixmount/fixmount.8,
	fsinfo/fsinfo.8, hlfsd/hlfsd.8, mk-amd-map/mk-amd-map.8,
	scripts/amd.conf.5, scripts/automount2amd.8,
	wire-test/wire-test.8: include references to info pages, proper
	authors, am-utils Web page, and amd book.

2003-07-13  Ion Badulescu  <lionut@gonzales.badula.org>

	* amd/mntfs.c (find_mntfs): re-add the check for mf_info, but with
	a special provision for inherited filesystems. This unbreaks the
	handling of parallel mounts

	* amd/amfs_generic.c (amfs_lookup_mntfs): for restarted
	filesystems, there can be no alternative mntfs to try to mount

2003-07-13  Erez Zadok  <ezk@cs.sunysb.edu>

	* amd/amd.8: reference am-utils info page in amd man page, as per
	Thomas Klausner <wiz@danbala.ifoer.tuwien.ac.at>.

	* fsinfo/fsinfo.h, fsinfo/fsinfo.c (fsi_get_args): don't use
	yywrap() if it doesn't exist.

	* amd/conf_parse.y, amd/conf_tok.l, fsinfo/fsi_gram.y,
	fsinfo/fsi_lex.l: fixes to support old flex 2.5.4, as well as the
	newer flex 2.5.31 (beta development).  These include resolving
	conflicts with yylineno, unput() vs. nounput(), etc.

2003-07-13  Ion Badulescu  <lionut@gonzales.badula.org>

	* amd/amfs_generic.c (amfs_cont): check for (am_error > 0) before
	calling assign_error_mntfs()